# SUPSI_Linguaggi_Procedurali_C

./: CMakeLists.txt  README.md
dec_to_bin/: CMakeLists.txt  main.c
es_prep_1/: CMakeLists.txt  main.c
es_t_1/: CMakeLists.txt  main.c
es_t_2/: CMakeLists.txt  main.c
qsort/: CMakeLists.txt  main.c
s1_es1/: CMakeLists.txt  main.c
s1_es2/: CMakeLists.txt  main.c
s1_es3/: CMakeLists.txt  main.c
s1_es4/: CMakeLists.txt  main.c
s2_es1/: CMakeLists.txt  main.c
s2_es1_v2/: CMakeLists.txt  main.c  stack.c  stack.h
s3_es1/: CMakeLists.txt  main.c
s3_es2/: CMakeLists.txt  main.c
s3_es3/: CMakeLists.txt  input.txt  main.c
s4_es1/: CMakeLists.txt  main.c
s4_es2/: CMakeLists.txt  main.c
s5_es1/: CMakeLists.txt  main.c
s6_es1/: CMakeLists.txt  main.c  stack.c  stack.h
somma_argomenti_passati/: CMakeLists.txt  main.c
testing/: CMakeLists.txt  main.c
tests/: CMakeLists.txt  main.c
